Update swagger annotations, add data seeding test