@@ -1,182 +1,3 @@
-//package com.twitterclone.backend.controllers;
-//
-//import com.twitterclone.backend.dto.*;
-//import com.twitterclone.backend.model.DisplayReply;
-//import com.twitterclone.backend.model.entities.LikeReply;
-//import com.twitterclone.backend.model.entities.Reply;
-//import com.twitterclone.backend.model.exceptions.EntityNotFoundException;
-//import com.twitterclone.backend.model.exceptions.ReactionAlreadyExistsException;
-//import com.twitterclone.backend.model.exceptions.UnauthorizedException;
-//import com.twitterclone.backend.model.services.JwtService;
-//import com.twitterclone.backend.model.services.ReplyService;
-//import jakarta.servlet.http.HttpServletRequest;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.data.domain.Page;
-//import org.springframework.data.domain.PageRequest;
-//import org.springframework.data.domain.Pageable;
-//import org.springframework.http.HttpStatus;
-//import org.springframework.http.ResponseEntity;
-//import org.springframework.web.bind.annotation.*;
-//
-//import java.util.List;
-//
-//import static java.lang.Integer.parseInt;
-//
-//@CrossOrigin(origins={"http://localhost:4200", "http://localhost:5173"}, allowedHeaders = "*")
-//@RestController
-//@RequestMapping("/api/reply")
-//@RequiredArgsConstructor
-//public class ReplyController {
-//
-//    private final ReplyService replyService;
-//    private final JwtService jwtService;
-//
-//    @PostMapping
-//    public ResponseEntity<?> createReplyToTweet(
-//            @RequestBody CreateReplyDto replyDto,
-//            HttpServletRequest request
-//    ) {
-//        long userId = replyDto.getUserId();
-//
-//        if (!isValidUser(request, userId)) {
-//            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-//        }
-//
-//        Reply reply = CreateReplyDto.fromDto(replyDto);
-//        try {
-//            DisplayReply createdReply = replyService.createReplyToTweet(reply, userId, replyDto.getTweetId(), replyDto.getParentReplyId());
-//            return ResponseEntity.ok(new DisplayReplyDto(createdReply));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        }
-//    }
-//
-//    @GetMapping("/{id}")
-//    public ResponseEntity<?> findReplyById(@PathVariable long id, HttpServletRequest request) {
-//        long userId = parseInt(extractUserIdFromToken(request));
-//        try {
-//            DisplayReply reply = replyService.findReplyById(id, userId);
-//            return ResponseEntity.ok(new DisplayReplyDto(reply));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        }
-//    }
-//
-//    @DeleteMapping("/{id}")
-//    public ResponseEntity<?> removeReplyFromTweet(@PathVariable long id, HttpServletRequest request) {
-//        long userId = Long.parseLong(extractUserIdFromToken(request));
-//
-//        try {
-//            replyService.deleteReplyFromTweet(id, userId);
-//            return ResponseEntity.noContent().build();
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        } catch (UnauthorizedException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.FORBIDDEN);
-//        }
-//    }
-//
-//    @GetMapping("/{userId}/user")
-//    ResponseEntity<?> getRepliesByUserId(
-//            @PathVariable long userId,
-//            @RequestParam(defaultValue = "0") String page,
-//            @RequestParam(defaultValue = "10") String size,
-//            HttpServletRequest request
-//    ) throws EntityNotFoundException {
-//        long currentUserId = parseInt(extractUserIdFromToken(request));
-//        Pageable pageable = PageRequest.of(Integer.parseInt(page), Integer.parseInt(size));
-//
-//        try {
-//            Page<DisplayReply> replies = replyService
-//                    .getRepliesByUserId(userId, currentUserId, pageable);
-//
-//            return ResponseEntity.ok(replies.map(DisplayReplyDto::new));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        }
-//    }
-//
-//    @GetMapping("/{tweetId}/tweet")
-//    public ResponseEntity<?> getRepliesByTweet(
-//            @RequestParam(defaultValue = "0") String page,
-//            @RequestParam(defaultValue = "10") String size,
-//            @PathVariable long tweetId,
-//            HttpServletRequest request
-//    ) {
-//        long userId = parseInt(extractUserIdFromToken(request));
-//
-//        Pageable pageable = PageRequest.of(Integer.parseInt(page), Integer.parseInt(size));
-//
-//        try {
-//            Page<DisplayReply> replies = replyService.getMainRepliesByTweetId(tweetId, userId, pageable);
-//            return ResponseEntity.ok(replies.map(DisplayReplyDto::new));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        }
-//    }
-//
-//    @GetMapping("/{replyId}/nested")
-//    public ResponseEntity<?> getNestedRepliesByReplyId(@PathVariable long replyId, HttpServletRequest request) {
-//        long userId = parseInt(extractUserIdFromToken(request));
-//
-//        try {
-//            List<DisplayReply> replies = replyService.getNestedRepliesByParentReplyId(replyId, userId);
-//            return ResponseEntity.ok(replies.stream().map(DisplayReplyDto::new).toList());
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        }
-//    }
-//
-//    @PostMapping("/like")
-//    public ResponseEntity<?> createLikeToReply(@RequestBody LikeReplyDto likeDto, HttpServletRequest request) {
-//        long userId = likeDto.getUserId();
-//
-//        if (!isValidUser(request, userId)) {
-//            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-//        }
-//
-//        LikeReply like = LikeReplyDto.fromDto(likeDto);
-//        try {
-//            DisplayReply updatedReply = replyService.createLikeToReply(like, userId, likeDto.getReplyId());
-//            return ResponseEntity.ok(new DisplayReplyDto(updatedReply));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        } catch (ReactionAlreadyExistsException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.CONFLICT);
-//        }
-//    }
-//
-//    @DeleteMapping("/{id}/like")
-//    public ResponseEntity<?> removeLikeToTweet(@PathVariable long id, HttpServletRequest request) {
-//        long userId = Long.parseLong(extractUserIdFromToken(request));
-//
-//        try {
-//            DisplayReply reply = replyService.deleteLikeFromReply(id, userId);
-//            return ResponseEntity.ok(new DisplayReplyDto(reply));
-//        } catch (EntityNotFoundException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
-//        } catch (UnauthorizedException e) {
-//            return new ResponseEntity<>(e.getFullMessage(), HttpStatus.FORBIDDEN);
-//        }
-//    }
-//
-//    private String extractUserIdFromToken(HttpServletRequest request) {
-//        String authHeader = request.getHeader("Authorization");
-//        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-//            return null;
-//        }
-//        String token = authHeader.substring(7);
-//        return jwtService.extractClaim(token, claims -> claims.get("userId", String.class));
-//    }
-//
-//    private boolean isValidUser(HttpServletRequest request, long userId) {
-//        String tokenUserId = extractUserIdFromToken(request);
-//        return tokenUserId != null && tokenUserId.equals(String.valueOf(userId));
-//    }
-//}
-
-
-// File: src/main/java/com/twitterclone/backend/controllers/ReplyController.java
 package com.twitterclone.backend.controllers;
 
 import com.twitterclone.backend.dto.*;
@@ -190,7 +11,6 @@ import com.twitterclone.backend.model.services.JwtService;
 import com.twitterclone.backend.model.services.ReplyService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
@@ -207,6 +27,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.lang.Integer.parseInt;
 
@@ -225,8 +46,7 @@ public class ReplyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Reply created successfully",
                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DisplayReplyDto.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden - User ID in DTO does not match token or invalid token",
-                    content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "403", description = "Forbidden - User ID in DTO does not match token or invalid token"),
             @ApiResponse(responseCode = "404", description = "Entity not found (User, Tweet, or Parent Reply)",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string")))
     })
@@ -236,11 +56,9 @@ public class ReplyController {
             HttpServletRequest request
     ) {
         long userId = replyDto.getUserId();
-
         if (!isValidUser(request, userId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-
         Reply reply = CreateReplyDto.fromDto(replyDto);
         try {
             DisplayReply createdReply = replyService.createReplyToTweet(reply, userId, replyDto.getTweetId(), replyDto.getParentReplyId());
@@ -254,6 +72,8 @@ public class ReplyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Reply found",
                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DisplayReplyDto.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "Reply not found",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string")))
     })
@@ -261,7 +81,6 @@ public class ReplyController {
     public ResponseEntity<?> findReplyById(
             @Parameter(description = "ID of the reply to retrieve") @PathVariable long id,
             HttpServletRequest request) {
-        // Assuming token is always present for this endpoint; if not, handle null from extractUserIdFromToken
         String userIdStr = extractUserIdFromToken(request);
         if (userIdStr == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("User ID not extractable from token");
@@ -277,7 +96,9 @@ public class ReplyController {
 
     @Operation(summary = "Remove/delete a reply")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "204", description = "Reply removed successfully", content = @Content),
+            @ApiResponse(responseCode = "204", description = "Reply removed successfully"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "403", description = "Forbidden - User not authorized to delete this reply",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "Reply not found",
@@ -292,7 +113,6 @@ public class ReplyController {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("User ID not extractable from token");
         }
         long userId = Long.parseLong(userIdStr);
-
         try {
             replyService.deleteReplyFromTweet(id, userId);
             return ResponseEntity.noContent().build();
@@ -306,7 +126,9 @@ public class ReplyController {
     @Operation(summary = "Get replies made by a specific user (paginated)")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully retrieved user's replies",
-                    content = @Content(mediaType = "application/json", schema = @Schema(implementation = Page.class))),
+                    content = @Content(schema = @Schema(implementation = Page.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "User not found",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string")))
     })
@@ -323,11 +145,9 @@ public class ReplyController {
         }
         long currentUserId = parseInt(currentUserIdStr);
         Pageable pageable = PageRequest.of(Integer.parseInt(page), Integer.parseInt(size));
-
         try {
             Page<DisplayReply> replies = replyService
                     .getRepliesByUserId(userId, currentUserId, pageable);
-
             return ResponseEntity.ok(replies.map(DisplayReplyDto::new));
         } catch (EntityNotFoundException e) {
             return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
@@ -337,7 +157,9 @@ public class ReplyController {
     @Operation(summary = "Get main replies for a specific tweet (paginated)")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully retrieved tweet's main replies",
-                    content = @Content(mediaType = "application/json", schema = @Schema(implementation = Page.class))),
+                    content = @Content(schema = @Schema(implementation = Page.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "Tweet or User not found",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string")))
     })
@@ -354,7 +176,6 @@ public class ReplyController {
         }
         long userId = parseInt(userIdStr);
         Pageable pageable = PageRequest.of(Integer.parseInt(page), Integer.parseInt(size));
-
         try {
             Page<DisplayReply> replies = replyService.getMainRepliesByTweetId(tweetId, userId, pageable);
             return ResponseEntity.ok(replies.map(DisplayReplyDto::new));
@@ -365,8 +186,11 @@ public class ReplyController {
 
     @Operation(summary = "Get nested replies for a specific parent reply")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Successfully retrieved nested replies",
-                    content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = DisplayReplyDto.class)))),
+            @ApiResponse(responseCode="200", description="Successfully retrieved nested replies",
+                    content = @Content(mediaType = "application/json",
+                            schema = @Schema(type = "array", implementation = DisplayReplyDto.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "Parent reply or User not found",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string")))
     })
@@ -379,10 +203,9 @@ public class ReplyController {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("User ID not extractable from token");
         }
         long userId = parseInt(userIdStr);
-
         try {
             List<DisplayReply> replies = replyService.getNestedRepliesByParentReplyId(replyId, userId);
-            return ResponseEntity.ok(replies.stream().map(DisplayReplyDto::new).toList());
+            return ResponseEntity.ok(replies.stream().map(DisplayReplyDto::new).collect(Collectors.toList()));
         } catch (EntityNotFoundException e) {
             return new ResponseEntity<>(e.getFullMessage(), HttpStatus.NOT_FOUND);
         }
@@ -392,8 +215,7 @@ public class ReplyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Reply liked successfully",
                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DisplayReplyDto.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden - User ID in DTO does not match token",
-                    content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "403", description = "Forbidden - User ID in DTO does not match token"),
             @ApiResponse(responseCode = "404", description = "Entity not found (User or Reply)",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "409", description = "Conflict - Reply already liked by this user",
@@ -402,11 +224,9 @@ public class ReplyController {
     @PostMapping("/like")
     public ResponseEntity<?> createLikeToReply(@RequestBody LikeReplyDto likeDto, HttpServletRequest request) {
         long userId = likeDto.getUserId();
-
         if (!isValidUser(request, userId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-
         LikeReply like = LikeReplyDto.fromDto(likeDto);
         try {
             DisplayReply updatedReply = replyService.createLikeToReply(like, userId, likeDto.getReplyId());
@@ -422,6 +242,8 @@ public class ReplyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Like removed successfully",
                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DisplayReplyDto.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized - User ID not extractable from token",
+                    content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "403", description = "Forbidden - User not authorized to remove this like",
                     content = @Content(mediaType = "text/plain", schema = @Schema(type = "string"))),
             @ApiResponse(responseCode = "404", description = "Like or Reply not found",
@@ -436,7 +258,6 @@ public class ReplyController {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("User ID not extractable from token");
         }
         long userId = Long.parseLong(userIdStr);
-
         try {
             DisplayReply reply = replyService.deleteLikeFromReply(id, userId);
             return ResponseEntity.ok(new DisplayReplyDto(reply));
